# Sophon-Stream-Web-zai

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  FINAL_STATUS.md  LICENSE  PROJECT_STATUS.md  README.md  TECHNICAL_REPORT.md  docker-compose.yml  keep-alive.sh  package-lock.json  package.json  server.js  start.sh
.monkeycode/: MEMORY.md
.monkeycode/specs/sophon-stream-web-management/: design.md  requirements.md
backend/: CMakeLists.txt  Makefile  sophon-stream-web
backend/config/: config.json  drogon_config.json
backend/src/: Router.cc  Router.h  main.cc
backend/src/common/: Version.cc  Version.h
backend/src/controllers/: AlertController.cc  AlertController.h  AlgorithmController.cc  AlgorithmController.h  ApiController.cc  ApiController.h  AuthController.cc  AuthController.h  ControllerRegistry.cc  ControllerRegistry.h  DeviceController.cc  DeviceController.h  MonitorController.cc  MonitorController.h  MonitorWsCtrl.cc  MonitorWsCtrl.h  PluginController.cc  PluginController.h  SystemController.cc  SystemController.h  TaskController.cc  TaskController.h
backend/src/database/: DbManager.cc  DbManager.h
backend/src/database/migrations/: V1__initial.sql  V2__seed_data.sql
backend/src/middleware/: Auth.h  AuthMiddleware.cc  AuthMiddleware.h  CORS.h  CORSMiddleware.cc  CORSMiddleware.h
backend/src/models/: Alert.h  AlertRule.h  Algorithm.h  AuditLog.h  Device.h  FirmwareVersion.h  Plugin.h  SystemConfig.h  Task.h  User.h
backend/src/services/: AlertService.cc  AlertService.h  AlgorithmService.cc  AlgorithmService.h  AuthService.cc  AuthService.h  DeviceService.cc  DeviceService.h  MonitorService.cc  MonitorService.h  PluginService.cc  PluginService.h  SystemService.cc  SystemService.h  TaskService.cc  TaskService.h
backend/src/sophon_bridge/: EngineBridge.cc  EngineBridge.h
backend/src/utils/: ConfigUtils.cc  ConfigUtils.h  CryptoUtils.cc  CryptoUtils.h  JwtUtils.cc  JwtUtils.h
backend/src/websocket/: MonitorWsController.cc  MonitorWsController.h  MonitorWsHandler.cc  MonitorWsHandler.h
backend/tests/: CMakeLists.txt  test_auth.cpp  test_device.cpp  test_task.cpp
cmake/: BM1684X-toolchain.cmake  BM1688-toolchain.cmake
config/: config.template.json  nginx.conf
frontend/: env.d.ts  index.html  mock-api.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/api/: alert.ts  algorithm.ts  auth.ts  device.ts  monitor.ts  plugin.ts  request.ts  system.ts  task.ts
frontend/src/assets/styles/: global.scss  variables.scss
frontend/src/components/chart/: BarChart.vue  GaugeChart.vue  LineChart.vue  PieChart.vue
frontend/src/components/common/: ConfirmDialog.vue  JsonEditor.vue  PageHeader.vue  SearchBar.vue  StatusBadge.vue
frontend/src/components/dag/: DAGEdge.vue  DAGEditor.vue  DAGNode.vue
frontend/src/components/layout/: AppLayout.vue  Header.vue  Sidebar.vue
frontend/src/components/roi/: ROIEditor.vue
frontend/src/router/: index.ts
frontend/src/stores/: alert.ts  algorithm.ts  auth.ts  device.ts  monitor.ts  plugin.ts  system.ts  task.ts
frontend/src/views/: Login.vue
frontend/src/views/alert/: Index.vue  Rules.vue
frontend/src/views/algorithm/: Index.vue
frontend/src/views/dashboard/: Index.vue
frontend/src/views/device/: Detail.vue  DeviceForm.vue  Index.vue
frontend/src/views/monitor/: Index.vue
frontend/src/views/plugin/: Index.vue
frontend/src/views/system/: Audit.vue  Firmware.vue  Index.vue  Users.vue
frontend/src/views/task/: Detail.vue  Index.vue  TaskForm.vue
mock-server/: package-lock.json  package.json  server.js
scripts/: build.sh  deploy.sh  dev.sh  install-deps.sh  sophon-stream-web.service
